--- a/index.html
+++ b/index.html
@@ -172,6 +172,111 @@
 
     <!-- catagories end -->
 
+<!-- shoes start -->
+
+<section class="container">
+<h1>Shoes</h1>
+  <div class="row">
+    <div class="class d-flex">
+      <div class="col-sm-6 col-md-4 col-sm-12 shadow-lg p-3 m-2 bg-body rounded">
+        <div>
+          <div class="card-body">
+            <img src="images/shoes/shoe-1.png" class="img-fluid" alt="">
+            <h5 class="card-title">Supply 350</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            <h3>$120</h3>
+            <a href="#" class="btn btn-info text-light">Buy Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-sm-12 shadow-lg p-3 m-2 bg-body rounded">
+        <div>
+          <div class="card-body">
+            <img src="images/shoes/shoe-2.png" class="img-fluid" alt="">
+            <h5 class="card-title">Nike 360</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            <h3>$320</h3>
+            <a href="#" class="btn btn-info text-light">Buy Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-sm-12 shadow-lg p-3 m-2 bg-body rounded">
+        <div>
+          <div class="card-body">
+            <img src="images/shoes/shoe-3.png" alt="" class="img-fluid">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+            <h3>$350</h3>
+            <a href="#" class="btn btn-info text-light">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    
+  </div>
+
+
+
+</section>
+
+
+
+<!-- shoes end -->
+<!-- backpack start -->
+
+
+
+<section class="container">
+  <h1>Bckpack</h1>
+    <div class="row">
+      <div class="class d-flex">
+        <div class="col-sm-6 col-md-4 shadow-lg p-3 m-2 bg-body rounded">
+          <div>
+            <div class="card-body">
+              <img src="images/bags/bag-1.png" class="img-fluid" alt="">
+              <h5 class="card-title">Red laltu bag</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+              <h3>$120</h3>
+              <a href="#" class="btn btn-info text-light">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 shadow-lg p-3 m-2 bg-body rounded">
+          <div>
+            <div class="card-body">
+              <img src="images/bags/bag-2.png" class="img-fluid" alt="">
+              <h5 class="card-title">Blue niltu bag</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+              <h3>$320</h3>
+              <a href="#" class="btn btn-info text-light">Buy Now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4  shadow-lg p-3 m-2 bg-body rounded">
+          <div>
+            <div class="card-body">
+              <img src="images/bags/bag-3.png" alt="" class="img-fluid">
+              <h5 class="card-title">Bag kaltu bag</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+              <h3>$350</h3>
+              <a href="#" class="btn btn-info text-light">Buy Now</a>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+      
+    </div>
+  
+  
+  
+  </section>
+
+
+
+<!-- backpack end-->
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
